; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_interior_register.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_interior_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LG_PAGE = common dso_local global i32 0, align 4
@extents_rtree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32)* @extent_interior_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @extent_interior_register(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @extent_slab_get(i32* %10)
  %12 = call i32 @assert(i32 %11)
  store i64 1, i64* %9, align 8
  br label %13

13:                                               ; preds = %35, %4
  %14 = load i64, i64* %9, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @extent_size_get(i32* %15)
  %17 = load i32, i32* @LG_PAGE, align 4
  %18 = ashr i32 %16, %17
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = icmp ult i64 %14, %20
  br i1 %21, label %22, label %38

22:                                               ; preds = %13
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i64 @extent_base_get(i32* %25)
  %27 = load i64, i64* %9, align 8
  %28 = load i32, i32* @LG_PAGE, align 4
  %29 = zext i32 %28 to i64
  %30 = shl i64 %27, %29
  %31 = add i64 %26, %30
  %32 = load i32*, i32** %7, align 8
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @rtree_write(i32* %23, i32* @extents_rtree, i32* %24, i64 %31, i32* %32, i32 %33, i32 1)
  br label %35

35:                                               ; preds = %22
  %36 = load i64, i64* %9, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %9, align 8
  br label %13

38:                                               ; preds = %13
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @extent_slab_get(i32*) #1

declare dso_local i32 @extent_size_get(i32*) #1

declare dso_local i32 @rtree_write(i32*, i32*, i32*, i64, i32*, i32, i32) #1

declare dso_local i64 @extent_base_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
